--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,26 +1,16 @@
-/* Root */
-
-:root {
-  color-scheme: light dark;
-}
-
-
 /* Body CSS applies at all resolutions */
 body {
-  background-color: light-dark(#fafafa, #151515);
   box-sizing: content-box;
-  color: light-dark(#151515, #fafafa);
   /* Font Stack https://bitsofco.de/the-new-system-font-stack/ */
   font-family: -apple-system,
-             BlinkMacSystemFont,
-             "Segoe UI",
-             Roboto,
-             Helvetica,
-             Arial,
-             sans-serif,
-             "Apple Color Emoji",  /* Emojis*/
-             "Segoe UI Emoji", /* Emojis*/
-             "Segoe UI Symbol"; /* Emojis*/
+               BlinkMacSystemFont,
+               "Segoe UI",
+               Roboto,
+               Oxygen-Sans,
+               Ubuntu,
+               Cantarell,
+               "Helvetica Neue",
+               sans-serif;
   font-size: 1rem;
   line-height: 1.7;
   margin: 0 auto;
@@ -30,7 +20,101 @@ body {
 }
 
 
-/* Media Queries */
+/* Internal vs External Links */
+/* https://stackoverflow.com/questions/26898931/ */
+a:not([href*='//']) {
+  text-decoration-style: dotted;
+}
+
+a[href*='//'] {
+  text-decoration-style: solid;
+}
+
+/* After styling for external links, currently just using text decoration
+a[href*='//']:after {
+  position: relative;
+  top: -0.5em;
+  font-size: .7em;
+  content: "+";
+}
+*/
+
+/* Light vs Dark Preference */
+/* Using media queries because root color scheme does not seem to work for styling pseudo-classes or pseudo-elements */
+
+@media (prefers-color-scheme: light) {
+
+  body {
+    background-color: #fafafa;
+    color: #151515;
+  }
+
+  /* Internal Links */
+  a:not([href*='//']) {
+    color: #151515;
+  }
+
+  a:not([href*='//']):hover {
+    background-color: #151515;
+    color: #fafafa;
+  }
+
+  /* External Links */
+  a[href*='//'] {
+    color: #151515;
+  }
+
+  a[href*='//']:hover {
+    background-color: #151515;
+    color: #fafafa;
+  }
+
+  /* Mouse Highlight */
+  ::selection {
+    background-color: #151515;
+    color: #fafafa;
+  }
+
+}
+
+
+@media (prefers-color-scheme: dark) {
+
+  body {
+    background-color: #151515;
+    color: #fafafa;
+  }
+
+  /* Internal Links */
+  a:not([href*='//']) {
+    color: #fafafa;
+  }
+
+  a:not([href*='//']):hover {
+    background-color: #fafafa;
+    color: #151515;
+  }
+
+  /* External Links */
+  a[href*='//'] {
+    color: #fafafa;
+  }
+
+  a[href*='//']:hover {
+    background-color: #fafafa;
+    color: #151515;
+  }
+
+  /* Mouse Highlight */
+  ::selection {
+    background-color: #fafafa;
+    color: #151515;
+  }
+
+}
+
+
+/* Responsive Scaling */
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
@@ -67,19 +151,4 @@ body {
     font-size: 1.6rem;
   }
 
-}
-
-
-/* Links https://stackoverflow.com/questions/26898931/ */
-
-/* Internal Link */
-a:not([href*='//']) {
-  color: light-dark(#151515, #fafafa);
-  text-decoration-style: dotted;
-}
-
-/* External Link */
-a[href*='//'] {
-  color: light-dark(#151515, #fafafa);
-  text-decoration-style: wavy;
 }
