Correct microformat author rel

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
       <!-- Microformats... not sure if I can hide them as comments...
       <a class="u-url" href="{{ page.url }}"></a>
       <a class="p-category" title="{{ page.category }}"></a>
-      <a class="p-author h-card" rel="author" href="https://steinea.work"></a>
+      <a class="p-author h-card" rel="author" href="https://steinea.fyi"></a>
       <time class="dt-published" datetime="{{ page.date }}"></time>
       -->
 
