--- a/_includes/h-card.html
+++ b/_includes/h-card.html
@@ -1,24 +1,29 @@
 <!-- More info at the microformats wiki https://microformats.org/wiki/h-card -->
 
+<p>My <a href="https://indieweb.org/">IndieWeb</a> identity, in the microformats2 <a href="https://microformats.org/wiki/h-card">h-card</a> model:</p>
+
 <div class="h-card" rel="me">
 
-  <img class="u-photo" src="/assets/img/favicon.png" width="50" height="50">
-  <br>Name: <span class="p-name" title="Name">Eric Stein</span>
-  <br>Phonetic: <span class="pronunciation" title="Phonetic">ɛrɪk staɪn</span>
-  <br>Pronouns: <span class="u-pronoun" title="Pronouns">he, him, his</span>
-  <br>Signs: <span class="p-signs"><abbr title="Sun in Capricorn">☉♑︎</abbr> <abbr title="Moon in Pisces">☽︎♓︎</abbr> <abbr title="Water Monkey">🜄猴</abbr> 🜚∞</span>
-  <br>Honorifics: <span class="p-honorific-suffix"><a href="https://arcabc.ca/islandora/object/twu%3A456" target="_blank" rel="noopener noreferrer" title="Degree">MA</a>, <a href="https://www.credly.com/badges/31521214-2f19-480d-a64c-0cf0ac225ede" target="_blank" rel="noopener noreferrer" title="Designation">PMP</a></span>
-  <br>Nickname: <span class="p-nickname" title="Nickname">@steinea</span>
-  <br>Homepage: <a class="u-url u-uid" title="URL" rel="me" href="https://steinea.fyi">https://steinea.fyi</a>
-  <br>Email: <a class="u-email" title="Email" href="mailto:steinea@protonmail.com">steinea at protonmail dot com</a>
-  <br>Fingerprint: <a class="u-key" title="PGP" href="/pgp/" rel="me pgpkey">B5B0 AA7E D450 9C8B</a>
-  <br>Organization: <a class="p-org" title="Organization" href="https://www.ea.com/en-ca" target="_blank" rel="noopener noreferrer">Electronic Arts</a>
-  <br>Title: <span class="p-job-title" title="Title">Associate Producer</span>
-  <br>Role: <span class="p-role" title="Role">Product Management</span>
-  <br>Industry: <span class="p-industry" title="Industry">Game Development</span>
-  <br>Locality: <a class="p-locality" title="Locality" href="https://en.wikipedia.org/wiki/Fraser_Valley" target="_blank" rel="noopener noreferrer">Fraser Valley</a>
-  <br>Region: <a class="p-region" title="Region" href="https://en.wikipedia.org/wiki/British_Columbia" target="_blank" rel="noopener noreferrer">British Columbia</a>
-  <br>Country: <a class="p-country-name" title="Country" href="https://en.wikipedia.org/wiki/Canada" target="_blank" rel="noopener noreferrer">Canada</a>
+  <!-- <img class="u-photo" src="/assets/img/favicon.png" width="50" height="50"> -->
+
+  <ul>
+    <li>Name: <span class="p-name" title="Name">Eric Stein</span></li>
+    <li>Phonetic: <span class="pronunciation" title="Phonetic">ɛrɪk staɪn</span></li>
+    <li>Pronouns: <span class="u-pronoun" title="Pronouns">he, him, his</span></li>
+    <li>Signs: <span class="p-signs"><abbr title="Sun in Capricorn">☉♑︎</abbr> <abbr title="Moon in Pisces">☽︎♓︎</abbr> <abbr title="Water Monkey">🜄猴</abbr> 🜚∞</span></li>
+    <li>Honorifics: <span class="p-honorific-suffix"><a href="https://arcabc.ca/islandora/object/twu%3A456" target="_blank" rel="noopener noreferrer" title="Degree">MA</a>, <a href="https://www.credly.com/badges/31521214-2f19-480d-a64c-0cf0ac225ede" target="_blank" rel="noopener noreferrer" title="Designation">PMP</a></span></li>
+    <li>Nickname: <span class="p-nickname" title="Nickname">@steinea</span></li>
+    <li>Homepage: <a class="u-url u-uid" title="URL" rel="me" href="https://steinea.fyi">https://steinea.fyi</a></li>
+    <li>Email: <a class="u-email" title="Email" href="mailto:steinea@protonmail.com">steinea at protonmail dot com</a></li>
+    <li>Fingerprint: <a class="u-key" title="PGP" href="/pgp/" rel="me pgpkey">B5B0 AA7E D450 9C8B</a></li>
+    <li>Organization: <a class="p-org" title="Organization" href="https://www.ea.com/en-ca" target="_blank" rel="noopener noreferrer">Electronic Arts</a></li>
+    <li>Title: <span class="p-job-title" title="Title">Associate Producer</span></li>
+    <li>Role: <span class="p-role" title="Role">Product Management</span></li>
+    <li>Industry: <span class="p-industry" title="Industry">Game Development</span></li>
+    <li>Locality: <a class="p-locality" title="Locality" href="https://en.wikipedia.org/wiki/Fraser_Valley" target="_blank" rel="noopener noreferrer">Fraser Valley</a></li>
+    <li>Region: <a class="p-region" title="Region" href="https://en.wikipedia.org/wiki/British_Columbia" target="_blank" rel="noopener noreferrer">British Columbia</a></li>
+    <li>Country: <a class="p-country-name" title="Country" href="https://en.wikipedia.org/wiki/Canada" target="_blank" rel="noopener noreferrer">Canada</a></li>
+  </ul>
 
   <!-- Verifying my OpenPGP key: openpgp4fpr:ECEDBC433379CF13E2534C29B5B0AA7ED4509C8B -->
 
