Add better meta description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <!-- Meta Details -->
     <meta charset="utf-8">
     <meta name="author" content="Eric Stein">
-    <meta name="description" content="hCard and Verify pages for Eric Stein.">
+    <meta name="description" content="Eric Stein is a game developer, game studies researcher, tabletop game designer, and occasional poet, located in the Fraser Valley of British Columbia.">
     <meta name="keywords" content="Card, Identity, Self, Verify">
     <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
 
