Add alt site link styling

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -30,6 +30,10 @@ a[href*='//'] {
   text-decoration-style: solid;
 }
 
+a[href*='//steinea'] {
+  text-decoration-style: wavy;
+}
+
 /* After styling for external links, currently just using text decoration
 a[href*='//']:after {
   position: relative;
