Add ways to slashes

--- a/_includes/slashes.html
+++ b/_includes/slashes.html
@@ -1,12 +1,10 @@
 These are my [Slash Pages](https://slashpages.net/), my human-readable sitemap:
 
 <blockquote>
-{% for page in site.pages %}
-  {% if page.category contains "slash" %}
-    <a href="{{ page.url }}">{{ page.title }}</a>{% unless forloop.last %}, {% endunless %}
-    <!-- Something is broken with this unless, comma appears at end of list still -->
-  {% endif %}
-{% endfor %}
+  {% assign sorted = site.pages | where: "category", "slash" | sort: "title" %}
+    {% for item in sorted %}
+      <a href="{{ item.url }}">{{ item.title }}</a>{% unless forloop.last %}, {% endunless %}
+    {% endfor %}
 </blockquote>
 
 <!--
